--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "fe6ccc53-75ca-44c7-8088-066f1cc28dc9",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,14 @@
     "# User config setting for Point Grey Bonsai multi camera acquisition.\n",
     "\n",
     "# Experiment config.\n",
+    "\n",
+    "\n",
+    "\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "from datetime import datetime\n",
+    "from subprocess import Popen\n",
     "\n",
     "subjects = {1:'m1',  # {box: subject_ID}\n",
     "            2:'m2',\n",
@@ -26,12 +34,37 @@
     "\n",
     "bonsai_path = 'C:\\\\Users\\\\mini2p_1_aux\\\\AppData\\\\Local\\\\Bonsai\\\\Bonsai.exe'\n",
     "\n",
-    "workflow_path = 'C:\\\\Users\\\\mini2p_1_aux\\\\Documents\\GitHub\\\\Basler_Bonsai_multi_camera_acquisition'\n"
+    "workflow_path = 'C:\\\\Users\\\\mini2p_1_aux\\\\Documents\\GitHub\\\\Basler_Bonsai_multi_camera_acquisition'\n",
+    "\n",
+    "pipe = '\\\\.\\pipe\\videopipe2'\n",
+    "video_file_path = 'D:\\video_test\\m1_2022-02-13-100611.mp4'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
+   "id": "52e4b3b3-c40f-47a9-9f7f-f4e3c5d69170",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ffmpeg -y -f rawvideo -vcodec rawvideo -s 1280x1024 -pix_fmt gray -r 60 -i \\.\\pipe\u000b",
+      "ideopipe2 -c:v h264_nvenc -profile:v high -preset slow -an D:\u000b",
+      "ideo_test\\m1_2022-02-13-100611.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipe = '\\\\.\\pipe\\videopipe2'\n",
+    "video_file_path = 'D:\\video_test\\m1_2022-02-13-100611.mp4'\n",
+    "print(r'ffmpeg -y -f rawvideo -vcodec rawvideo -s 1280x1024 -pix_fmt gray -r 60 -i {} -c:v h264_nvenc -profile:v high -preset slow -an {}'.format(pipe, video_file_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "bb212b53-4a63-4805-be09-07dc0c906472",
    "metadata": {},
    "outputs": [],
@@ -41,7 +74,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "5419bd27-ae88-42d2-8dc2-a3f8ac068496",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "4a15e962-4c37-4a7f-b9e4-fd734189a984",
    "metadata": {},
    "outputs": [],
@@ -61,35 +102,60 @@
     "import time\n",
     "\n",
     "from datetime import datetime\n",
-    "from subprocess import Popen\n",
-    "\n",
-    "#from config import subjects, data_dir, camera_IDs, bonsai_path, workflow_path\n",
-    "\n",
-    "datetime_str = datetime.now().strftime('%Y-%m-%d-%H%M%S')\n",
-    "\n",
-    "command = bonsai_path + ' ' +  workflow_path  + ' --start'"
+    "from subprocess import Popen\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5f5a9737-5f96-4e55-bd43-624f71f210f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = '\\\\.\\pipe\\videopipe0'\n",
+    "video_file_path = 'D:\\video_test\\video1.mp4'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d8db5bbe-9739-4f8c-832b-d38d1c39fdba",
+   "id": "056c626d-3660-4cfa-b379-ccd541650156",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\mini2p_1_aux\\\\AppData\\\\Local\\\\Bonsai\\\\Bonsai.exe C:\\\\Users\\\\mini2p_1_aux\\\\Documents\\\\GitHub\\\\Basler_Bonsai_multi_camera_acquisition --start'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "command"
+    "ffmpeg_processes = []\n",
+    "ffmpeg_processes.append(Popen(r'ffmpeg -y -f rawvideo -vcodec rawvideo -s 1280x1024 -pix_fmt gray -r 60 -i {} -c:v h264_nvenc -profile:v high -preset slow -an {}'.format(pipe, video_file_path)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68cbcc0d-97ed-48d9-8eed-3a2bf125f96f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = '\\\\.\\pipe\\videopipe1'\n",
+    "video_file_path = 'D:\\video_test\\video2.mp4'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2e486223-e1fb-4713-aee2-e440d6435546",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ffmpeg_processes.append(Popen(r'ffmpeg -y -f rawvideo -vcodec rawvideo -s 1280x1024 -pix_fmt gray -r 60 -i {} -c:v h264_nvenc -profile:v high -preset slow -an {}'.format(pipe, video_file_path)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8895d9b4-e9cd-4a3b-92f9-86d291381cce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
